qrcode payment complete impl
